--- a/app/src/main/res/layout/activity_reg.xml
+++ b/app/src/main/res/layout/activity_reg.xml
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/etName" />
 
     <Button
-        android:id="@+id/btAut"
+        android:id="@+id/btAction"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -74,7 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Back Aut"
-        app:layout_constraintEnd_toEndOf="@+id/btAut"
-        app:layout_constraintStart_toStartOf="@+id/btAut"
-        app:layout_constraintTop_toBottomOf="@+id/btAut" />
+        app:layout_constraintEnd_toEndOf="@+id/btAction"
+        app:layout_constraintStart_toStartOf="@+id/btAction"
+        app:layout_constraintTop_toBottomOf="@+id/btAction" />
 </androidx.constraintlayout.widget.ConstraintLayout>
